<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".AgendaActivity">

    <TextView
        android:id="@+id/txtTituloAgenda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_agenda"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDataSelecionada"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/data_inicial_agenda"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtTituloAgenda" />

    <ListView
        android:id="@+id/listViewAgendamentos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:dividerHeight="8dp"
        app:layout_constraintBottom_toTopOf="@id/btnNovoAgendamento"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtDataSelecionada"
        tools:listitem="@android:layout/simple_list_item_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNovoAgendamento"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/agendar_nova_consulta"
        app:icon="@android:drawable/ic_input_add"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>